# lz4

./: .gitignore  .gitmodules
native_lib/: CMakeLists.txt
package/lz4/: README.md  pubspec.yaml
package/lz4/example/: lz4_example.dart
package/lz4/lib/: lz4.dart
package/lz4/lib/src/lz4/: decoder.dart  encoder.dart
package/lz4/lib/src/lz4/stubs/: codec.dart
package/lz4/test/: lz4_test.dart
package/lz4_flutter/: LICENSE  README.md  ffigen.yaml  pubspec.yaml
package/lz4_flutter/android/: build.gradle
package/lz4_flutter/android/src/main/: AndroidManifest.xml
package/lz4_flutter/example/: README.md  pubspec.yaml
package/lz4_flutter/example/android/app/: build.gradle
package/lz4_flutter/example/android/app/src/debug/: AndroidManifest.xml
package/lz4_flutter/example/android/app/src/main/: AndroidManifest.xml
package/lz4_flutter/example/android/app/src/main/kotlin/com/example/lz4_flutter_example/: MainActivity.kt
package/lz4_flutter/example/ios/Runner/: Info.plist
package/lz4_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
package/lz4_flutter/example/lib/: main.dart
package/lz4_flutter/example/linux/: CMakeLists.txt  my_application.cc
package/lz4_flutter/example/linux/flutter/: generated_plugins.cmake
package/lz4_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
package/lz4_flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
package/lz4_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
package/lz4_flutter/example/windows/: CMakeLists.txt
package/lz4_flutter/example/windows/flutter/: generated_plugins.cmake
package/lz4_flutter/example/windows/runner/: Runner.rc
package/lz4_flutter/ios/: lz4_flutter.podspec
package/lz4_flutter/ios/Classes/: lz4_flutter.c
package/lz4_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
package/lz4_flutter/lib/: lz4_flutter.dart  lz4_flutter_bindings_generated.dart
package/lz4_flutter/linux/: CMakeLists.txt
package/lz4_flutter/macos/: lz4_flutter.podspec
package/lz4_flutter/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
package/lz4_flutter/src/: CMakeLists.txt  lz4_flutter.c
package/lz4_flutter/test/: lz4_flutter_test.dart
package/lz4_flutter/windows/: CMakeLists.txt
